--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Startpage</title>
+    <title>~/startpage</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="favicon.ico">
   </head>
   <body onload="document.body.style.opacity='1'">
     <div id="container">
