--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body onload="document.body.style.opacity='1'">
     <div id="container">
       <div id="blocked">
-        <div id="logo">おかえり！</div>
+        <div id="logo">hi.</div>
         <div id="search">
           <form>
             <input id="box" type="text" autocomplete="off" placeholder='type  :<key>  and  hit enter' /></form>
